@@ -5,7 +5,7 @@ Last-Update: 2017-01-04
 
 --- a/src/lib/library.pri
 +++ b/src/lib/library.pri
-@@ -28,7 +28,7 @@
+@@ -29,7 +29,7 @@
  include(../../qbs_version.pri)
  VERSION = $${QBS_VERSION}
  
