@@ -5,7 +5,7 @@ Last-Update: 2016-03-20
 
 --- a/tests/auto/blackbox/tst_blackbox.cpp
 +++ b/tests/auto/blackbox/tst_blackbox.cpp
-@@ -1177,6 +1177,7 @@
+@@ -1008,6 +1008,7 @@
  
  void TestBlackbox::concurrentExecutor()
  {
